<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heyphil</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_heyphil_screen">HeyphilScreen</string>
    <!-- Hints -->
    <string name="string_search_hint">Provider Name/Location</string>

    <!-- Main Screen -->
    <string name="string_btn_register">Register</string>
    <string name="string_btn_login">Log-in</string>

    <!-- Register Screen -->
    <string name="string_label_registration">Registration</string>
    <string name="string_label_last_name">Last Name </string>
    <string name="string_label_home_address">Home Address </string>
    <string name="string_label_bldg_no">Bldg. Number </string>
    <string name="string_label_street">Street </string>
    <string name="string_label_brgy">Brgy. </string>
    <string name="string_label_city">City </string>
    <string name="string_label_province">Province </string>
    <string name="string_label_home_no">Home Number </string>
    <string name="string_label_first_name">First Name </string>
    <string name="string_label_cert_no">Certificate Number </string>
    <string name="string_label_birthdate">Birthdate </string>
    <string name="string_label_address">Address </string>
    <string name="string_label_mobile_no">Mobile Number </string>
    <string name="string_label_email">E-mail </string>
    <string name="string_label_username">Username </string>
    <string name="string_label_password">Password </string>
    <string name="string_btn_submit">SUBMIT</string>
    <string name="string_btn_cancel">CANCEL</string>
    <string name="string_cb_agree">I agree to the Philcare Go!Mobile\u0020</string>
    <string name="string_text_t_and_c"><u>Terms and Conditions.</u></string>
    <string name="string_btn_ok">OK</string>
    <string name="string_default_country_code">+63</string>

    <!-- Login Screen -->
    <string name="string_label_login">Log-in</string>
    <string name="string_login_btn_text">Login</string>
    <string name="string_label_login_cert_no">Username </string>
    <string name="string_label_login_password">Password </string>
    <string name="string_text_button_forgot_password"><u>Forgot your password?</u></string>
    <string name="string_text_button_change_password"><u>Change Password</u></string>
    <string name="string_text_new_user">New user?\u0020</string>
    <string name="string_text_button_sign_up"><b>Sign up</b></string>
    <string name="string_text_for_free">\u0020for free</string>

    <!-- Password Setup Screen -->
    <string name="string_label_password_setup">PASSWORD SETUP</string>
    <string name="string_label_change_password"><b>Change Password</b></string>
    <string name="string_label_current_password">Current Password </string>
    <string name="string_label_new_password">New Password </string>
    <string name="string_label_confirm_password">Confirm Password </string>

    <!-- Forgot Password Screen -->
    <string name="string_label_forgot_password">Forgot Password</string>
    <string name="string_label_forgot_password_text">Please enter your email address to retrieve your password.</string>
    <string name="string_label_forgot_password_email">Email Address </string>

    <!-- My Account Selection Screen -->
    <string name="string_label_my_account">My\nAccount</string>
    <string name="string_label_my_account_2">My Account</string>

    <!-- Homepage Screen -->
    <string name="string_label_btn_my_account">My\nAccount</string>
    <string name="string_label_btn_provider_finder">Find a clinic\nor hospital?</string>
    <string name="string_label_btn_mobile_loa">Mobile\nLOA</string>
    <string name="string_label_btn_online_appointment">Online\nAppointment</string>
    <string name="string_label_btn_my_messages">My\nMessages</string>

    <!-- HeyPhil -->
    <string name="string_label_my_heyphil">My HeyPhil</string>
    <string name="string_btnlabel_send">Send</string>
    <string name="title_activity_philcare_products">PhilcareProducts</string>
    <string name="title_activity_chat_bubble2">ChatBubbleActivity2</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="facebook_app_id">1605706099732437</string>

</resources>