<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#008444"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/heyphil_logo"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/et_username"
            android:paddingLeft="10dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/shadow"
            android:layout_gravity="center"
            android:textColor="#6d6767"
            android:textSize="20sp"
            android:hint="USERNAME"/>

        <EditText
            android:id="@+id/et_password"
            android:paddingLeft="10dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shadow"
            android:layout_gravity="center"
            android:textColor="#6d6767"
            android:textSize="20sp"
            android:hint="PASSWORD"/>

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <View
                android:id="@+id/buttons_spacer_right"
                android:layout_width="0dip"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="119dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_login_btn_text"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:text="@string/string_text_button_forgot_password"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layout_main1"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/tv_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_new_user"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_button_sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_for_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_for_free"
                android:textColor="@color/white" />

        </LinearLayout>
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="If you are an existing PhilCare Go!Mobile user, no registration is required. You may directly proceed to access the app by using your PhilCare Go!Mobile account."
            android:background="@drawable/custombutton"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>